docling-serve/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docling-serve-two
  labels:
    app: docling-serve
    component: docling-serve-api
spec:
  replicas: 0
  selector:
    matchLabels:
      app: docling-serve
      component: docling-serve-api
  template:
    metadata:
      labels:
        app: docling-serve
        component: docling-serve-api
    spec:
      containers:
        - name: api
          image: ghcr.io/docling-project/docling-serve-cu124:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5001
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
            limits:
              cpu: "1"
              memory: 4Gi
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
      restartPolicy: Always
